# Upwork-clinet

./: README.md
bike_repair_bot/: .env.example  .gitignore  Cargo.toml  README.md
bike_repair_bot/src/: config.rs  main.rs
bike_repair_bot/src/ai/: mod.rs  openai_client.rs  prompts.rs
bike_repair_bot/src/models/: chat.rs  document.rs  mod.rs
bike_repair_bot/src/pdf/: chunker.rs  extractor.rs  mod.rs
bike_repair_bot/src/rag/: embeddings.rs  mod.rs  retriever.rs  vector_store.rs
bike_repair_bot/src/security/: circuit_breaker.rs  mod.rs  rate_limiter.rs  validator.rs
bike_repair_bot/src/server/: handlers.rs  routes.rs
